--- a/pizza-oregano-backend/pom.xml
+++ b/pizza-oregano-backend/pom.xml
@@ -55,11 +55,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		</dependencies>
 
 	<build>
 		<plugins>
